# video-core

./: .gitignore  Makefile  README.md  pyproject.toml  video_core.ipynb  video_core_kaggle.ipynb
.github/instructions/: python.instructions.md
results/sample-video/: output.json
src/: cli.py
src/extractors/: __init__.py  motion_analyzer.py  object_dominance.py  shot_cut_detector.py  text_analyzer.py
src/utils/: __init__.py  gpu_utils.py
