[project]
name = "video-core"
version = "0.1.0"
description = "Video feature extraction tool for analyzing visual and temporal features"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "numpy>=2.3.4",
    "opencv-python>=4.11.0.86",
    "questionary>=2.1.1",
    "scenedetect[opencv]>=0.6.7.1",
]
